--- a/src/package.xml
+++ b/src/package.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
+        <members>PSDemoUtils</members>
+        <members>PSField</members>
+        <members>PSMetaUtils</members>
         <members>PSRecordSearchController</members>
         <name>ApexClass</name>
     </types>
